# aegis

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
aegis_core/core/: config.py  types.py
tests/smoke/: test_ground_zero.py
