[project]
name = "aegis-cua"
version = "0.1.0"
description = "Reliability + safety middleware that wraps any computer-use agent. Wide-scaling, verification, security guardrails."
authors = [{ name = "AEGIS Contributors" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["cua", "computer-use", "agents", "browser", "kernel", "northstar", "tzafon"]

dependencies = [
    "kernel>=0.1.0",
    "tzafon>=0.1.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "imagehash>=4.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "httpx>=0.27",
    "rich>=13.0",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
self-host = ["vllm>=0.6.0", "transformers>=4.45", "torch>=2.4"]
eval = ["datasets>=3.0", "wandb>=0.18"]
dev = ["pytest>=8.0", "ruff>=0.7", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/aegis-cua/aegis"
Repository = "https://github.com/aegis-cua/aegis"

[project.scripts]
aegis = "aegis_core.cli:main"
bargain-radar = "examples.bargain_radar.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegis_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
